--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Тег А, атрибут href</title>
+ </head>
+ <body>
+  <p><a href="profi-app://listing/repetitor/">листинг</a></p>
+ </body>
+</html>
