--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Тег А, атрибут href</title>
  </head>
  <body>
-  <p><a href="https://profi.ru/krasota/">листинг</a></p>
+  <p><a href="https://gpetrosyan.github.io/krasota">листинг</a></p>
  </body>
 </html>
