--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Тег А, атрибут href</title>
  </head>
  <body>
-  <p><a href="https://gpetrosyan.github.io/krasota">листинг</a></p>
+  <p><a href="backoffice-app://profi.ru/paymеnt">paymеnt</a></p>
+  <p><a href="backoffice-app://&sub1=order&sub2=17729308">ORDER: 'order'</a></p>
+  <p><a href="backoffice-app://&sub1=order_candidate&sub2=17729308">ORDER_CANDIDATE: 'order_candidate'</a></p>
+  <p><a href="backoffice-app://&sub1=nk_chat&sub2=17729308&sub3=5015">CHAT: 'nk_chat'</a></p>
+  <p><a href="backoffice-app://&sub1=myorder&sub2=17729308">MY_ORDER: 'myorder'</a></p>
+  <p><a href="backoffice-app://&sub1=admin_chat&sub2=17729308&sub3=5015">ADMIN_CHAT: 'admin_chat'</a></p>
+  <p><a href="backoffice-app://&sub1=client_chat&sub2=17729308&sub3=5015">CLIENT_CHAT: 'client_chat'</a></p>
+  <p><a href="backoffice-app://&sub1=subscription">SUBSCRIPTION: 'subscription'</a></p>
+  <p><a href="backoffice-app://&sub1=registration">REGISTRATION: 'registration'</a></p>
+  <p><a href="backoffice-app://profi.ru/filter">FILTER: 'filter'</a></p>
+  <p><a href="backoffice-app://profi.ru/payment">PAYMENT: 'payment'</a></p>
+  <p><a href="backoffice-app://profi.ru/profile?section=form">PROFILE: 'profile'</a></p>
+  <p><a href="backoffice-app://profi.ru/onboarding">ONBOARDING: 'onboarding'</a></p>
+  <p><a href="backoffice-app://profi.ru/onboarding">WEB_VIEW: 'webview'</a></p>
+  <p><a href="backoffice-app://profi.ru/orders?section=all">ORDERS: 'orders'</a></p>
  </body>
 </html>
